# AutoCAD-CAE

./: .gitignore  ARCHITECTURE_DIAGRAM.md  AutoCAD_CAE_System_Architecture_V3.txt  CLAUDE.md  DEMO_GUIDE.md  PROJECT_DEMO_SUMMARY.md  PROJECT_RULES.md  TODO.md  TODO2.md
autocae_pipeline/: pyproject.toml
autocae_pipeline/docs/: run_contract_v1.md
autocae_pipeline/examples/: cylindrical_shell_modal.yaml  cylindrical_shell_pressure.yaml  flat_plate_buckling.yaml  flat_plate_tension.json  flat_plate_tension.yaml  open_hole_compression_buckling.yaml  open_hole_tension.yaml  sandwich_plate_bending.yaml
autocae_pipeline/scripts/: run_full_visualization.py
autocae_pipeline/src/autocae/: __init__.py  cli.py
autocae_pipeline/src/autocae/backend/: __init__.py
autocae_pipeline/src/autocae/cad/: __init__.py  builder.py  step_handler.py
autocae_pipeline/src/autocae/case_spec/: __init__.py  builder.py  validator.py
autocae_pipeline/src/autocae/diagnostics/: __init__.py  validator.py
autocae_pipeline/src/autocae/mesh/: __init__.py  builder.py
autocae_pipeline/src/autocae/pipeline/: __init__.py  runner.py
autocae_pipeline/src/autocae/postprocess/: __init__.py  engine.py  frd_parser.py
autocae_pipeline/tests/: test_artifact_locator.py  test_cad_gate_service.py  test_cad_llm_service.py  test_case_spec.py  test_cli_review.py  test_doctor_service.py  test_intake_service.py  test_llm_selfrepair_v3.py  test_mesh_gate_service.py  test_mesh_llm_service.py  test_pipeline_dry_run.py  test_run_audit_artifacts.py  test_solver_adapter.py  test_template_registry.py
(+61 files in other folders)
